unpackaged/main/default/objects/Offers__c/Offers__c.object-meta.xml
<CustomObject>
    <label>Offers</label>
    <nameField>
        <displayFormat>offer-{00000}</displayFormat>
        <label>Offers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>