unpackaged/main/default/objects/Offers__c/fields/Canidate_Email__c.field-meta.xml
<CustomField>
    <fullName>Canidate_Email__c</fullName>
    <label>Canidate Email</label>
    <type>Email</type>
</CustomField>