unpackaged/main/default/objects/Offers__c/fields/CTC_Offered__c.field-meta.xml
<CustomField>
    <fullName>CTC_Offered__c</fullName>
    <label>CTC Offered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>