unpackaged/main/default/objects/Offers__c/fields/Offer_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Expiration_Date__c</fullName>
    <formula>IF( OR (ISPICKVAL( Offer_Status__c , &#39;&#39;),ISPICKVAL( Offer_Status__c , &#39;Not Accepted&#39;),ISPICKVAL( Offer_Status__c , &#39;Rejected&#39;),ISPICKVAL( Offer_Status__c , &#39;Rejected By HR&#39;)) ,  Offered_Date__c +5, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Expiration Date</label>
    <type>Date</type>
</CustomField>