unpackaged/main/default/objects/Offers__c/fields/Offered_Date__c.field-meta.xml
<CustomField>
    <fullName>Offered_Date__c</fullName>
    <label>Offered Date</label>
    <type>Date</type>
</CustomField>